# i_said_we_should_date

./: Cargo.toml  LICENSE  README.md  simple.c
src/: bin.rs  lib.rs
